# autosense

./: .gitignore  Dockerfile  README.md  api.py  api_local.py  create_tables.py  docker-compose.yml  inst.txt  pyproject.toml  setup.py  ui_local.py
.github/workflows/: ci.yml
agent/: core.py  errors.py
eval/: run_eval.py
index/: build_index.py
ingest/: dtc.py  recalls.py  sensors.py
sql/: schema.sql
tests/: test_search.py
ui/: app.py
